syntax = "proto3";

message SelectOption {
    string id = 1;
    string name = 2;
    SelectOptionColor color = 3;
}
message SelectOptionCellChangesetPayload {
    string grid_id = 1;
    string row_id = 2;
    string field_id = 3;
    oneof one_of_insert_option_id { string insert_option_id = 4; };
    oneof one_of_delete_option_id { string delete_option_id = 5; };
}
message SelectOptionContext {
    repeated SelectOption options = 1;
    repeated SelectOption select_options = 2;
}
enum SelectOptionColor {
    Purple = 0;
    Pink = 1;
    LightPink = 2;
    Orange = 3;
    Yellow = 4;
    Lime = 5;
    Green = 6;
    Aqua = 7;
    Blue = 8;
}
